[tool.poetry]
name = "bot-main"
version = "0.1.0"
description = ""
authors = ["e.truhin <65777835+TeaArx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi = "^2024.12.14"
charset-normalizer = "^3.4.1"
idna = "^3.10"
pytelegrambotapi = "^4.26.0"
requests = "^2.32.3"
telebot = "^0.0.5"
urllib3 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
